--- a/.hlint.yaml
+++ b/.hlint.yaml
@@ -15,6 +15,8 @@
 - ignore:
     name: "Use void"
 - ignore:
+    name: "Fuse mapMaybe/map"
+- ignore:
     name: "Reduce duplication"
 - ignore:
     name: "Redundant do"
