--- a/smos-query/smos-query.cabal
+++ b/smos-query/smos-query.cabal
@@ -20,6 +20,7 @@ library
       Smos.Query.Commands.Agenda
       Smos.Query.Commands.Clock
       Smos.Query.Commands.Entry
+      Smos.Query.Commands.Free
       Smos.Query.Commands.Import
       Smos.Query.Commands.Log
       Smos.Query.Commands.Next
@@ -43,7 +44,8 @@ library
   build-tool-depends:
       autoexporter:autoexporter
   build-depends:
-      aeson
+      IntervalMap
+    , aeson
     , aeson-pretty
     , autodocodec
     , base
@@ -86,6 +88,7 @@ test-suite smos-query-test
   main-is: Spec.hs
   other-modules:
       Smos.Query.AgendaSpec
+      Smos.Query.FreeSpec
       Smos.Query.NextSpec
       Smos.Query.TestUtils
       Smos.Query.WaitingSpec
