Gen interesting entries in all GenValid instances

--- a/smos-data-gen/smos-data-gen.cabal
+++ b/smos-data-gen/smos-data-gen.cabal
@@ -186,6 +186,7 @@ library
   build-depends:
       QuickCheck
     , base >=4.9 && <=5
+    , containers
     , genvalidity >=1.0
     , genvalidity-containers
     , genvalidity-text
