--- a/smos-server/package.yaml
+++ b/smos-server/package.yaml
@@ -13,6 +13,7 @@ library:
   ghc-options: -Wall
   build-tools: autoexporter
   dependencies:
+  - IntervalMap
   - aeson
   - aeson-pretty
   - autodocodec
