make an ical event based on the booking times

--- a/smos-web-server/smos-web-server.cabal
+++ b/smos-web-server/smos-web-server.cabal
@@ -19,7 +19,8 @@ extra-source-files:
     templates/auth/login.hamlet
     templates/auth/register.hamlet
     templates/backups.hamlet
-    templates/book-user.hamlet
+    templates/book-user/booked.hamlet
+    templates/book-user/select-slot.hamlet
     templates/booking.hamlet
     templates/checkout.hamlet
     templates/default-body.hamlet
@@ -98,6 +99,7 @@ library
     , http-client
     , http-client-tls
     , http-types
+    , ical
     , monad-logger
     , mtl
     , optparse-applicative
