booking golden test

--- a/smos-web-server/package.yaml
+++ b/smos-web-server/package.yaml
@@ -97,6 +97,7 @@ tests:
     - genvalidity-sydtest
     - http-client
     - http-types
+    - ical
     - monad-logger
     - servant-client
     - smos-client
@@ -108,4 +109,6 @@ tests:
     - sydtest
     - sydtest-yesod
     - text
+    - time
+    - tz
     - yesod-auth
