booking settings endpoints

--- a/smos-server/smos-server.cabal
+++ b/smos-server/smos-server.cabal
@@ -29,10 +29,12 @@ library
       Smos.Server.Handler.Admin.PostMigrateFiles
       Smos.Server.Handler.Admin.PutUserSubscription
       Smos.Server.Handler.DeleteBackup
+      Smos.Server.Handler.DeleteBookingSettings
       Smos.Server.Handler.DeleteUser
       Smos.Server.Handler.GetAgendaReport
       Smos.Server.Handler.GetApiVersion
       Smos.Server.Handler.GetBackup
+      Smos.Server.Handler.GetBookingSettings
       Smos.Server.Handler.GetBookingSlots
       Smos.Server.Handler.GetListBackups
       Smos.Server.Handler.GetListSmosFiles
@@ -48,6 +50,7 @@ library
       Smos.Server.Handler.PostRegister
       Smos.Server.Handler.PostStripeHook
       Smos.Server.Handler.PostSync
+      Smos.Server.Handler.PutBookingSettings
       Smos.Server.Handler.PutRestoreBackup
       Smos.Server.Handler.PutSmosFile
       Smos.Server.Looper
