booking settings for user

--- a/smos-web-server/smos-web-server.cabal
+++ b/smos-web-server/smos-web-server.cabal
@@ -117,6 +117,7 @@ library
     , smos
     , smos-cli
     , smos-client
+    , smos-data
     , smos-directory
     , smos-report
     , smos-sync-client
