User name and email address in booking

--- a/smos-web-server/package.yaml
+++ b/smos-web-server/package.yaml
@@ -102,6 +102,7 @@ tests:
     - ical
     - monad-logger
     - servant-client
+    - smos-api
     - smos-client
     - smos-data-gen
     - smos-server-gen
