Let the booking endpoint output an ical file

--- a/smos-api/package.yaml
+++ b/smos-api/package.yaml
@@ -22,6 +22,7 @@ library:
   - dirforest
   - hashable
   - http-api-data
+  - ical
   - memory
   - mergeful
   - mergeful-persistent
@@ -34,6 +35,7 @@ library:
   - servant
   - servant-auth
   - servant-auth-server
+  - servant-client
   - smos-data
   - smos-report
   - text
