--- a/smos-server/package.yaml
+++ b/smos-server/package.yaml
@@ -25,12 +25,14 @@ library:
   - envparse
   - filepath
   - http-client
+  - ical
   - jose
   - looper
   - mergeful
   - microlens
   - monad-logger
   - mtl
+  - network-uri
   - optparse-applicative
   - path
   - path-io
