--- a/smos-api/smos-api.cabal
+++ b/smos-api/smos-api.cabal
@@ -35,6 +35,7 @@ library
     , dirforest
     , hashable
     , http-api-data
+    , ical
     , memory
     , mergeful
     , mergeful-persistent
@@ -47,6 +48,7 @@ library
     , servant
     , servant-auth
     , servant-auth-server
+    , servant-client
     , smos-data
     , smos-report
     , text
