Use a unique id for the event

--- a/smos-server-gen/smos-server-gen.cabal
+++ b/smos-server-gen/smos-server-gen.cabal
@@ -167,6 +167,7 @@ test-suite smos-server-test
     , time
     , typed-uuid
     , tz
+    , uuid
     , zip
     , zstd
   default-language: Haskell2010
