smos-report: speed up work report generation

--- a/smos-report-gen/smos-report-gen.cabal
+++ b/smos-report-gen/smos-report-gen.cabal
@@ -91,6 +91,7 @@ library
     , cursor
     , cursor-gen
     , deepseq
+    , dlist
     , genvalidity >=1.0
     , genvalidity-containers
     , genvalidity-path
