--- a/smos-report-gen/package.yaml
+++ b/smos-report-gen/package.yaml
@@ -22,6 +22,7 @@ library:
   - cursor
   - cursor-gen
   - deepseq
+  - dlist
   - genvalidity >=1.0
   - genvalidity-containers
   - genvalidity-path
