--- a/smos-server/smos-server.cabal
+++ b/smos-server/smos-server.cabal
@@ -74,6 +74,8 @@ library
       IntervalMap
     , aeson
     , aeson-pretty
+    , amazonka
+    , amazonka-ses
     , autodocodec
     , autodocodec-yaml
     , base
@@ -84,6 +86,7 @@ library
     , envparse
     , filepath
     , http-client
+    , http-types
     , ical
     , jose
     , looper
@@ -98,6 +101,7 @@ library
     , persistent
     , persistent-sqlite
     , pretty-show
+    , retry
     , semver
     , servant
     , servant-auth-server
