--- a/smos-server-gen/smos-server-gen.cabal
+++ b/smos-server-gen/smos-server-gen.cabal
@@ -14,6 +14,7 @@ build-type:     Simple
 extra-source-files:
     test_resources/booking/calendar.ics
     test_resources/booking/email.html
+    test_resources/booking/email.mime
     test_resources/booking/email.txt
     test_resources/booking/subject.txt
     test_resources/compressed/hello-world-1.dat
