Add extra info to the booking at the end

--- a/smos-web-server/smos-web-server.cabal
+++ b/smos-web-server/smos-web-server.cabal
@@ -19,6 +19,7 @@ extra-source-files:
     templates/auth/login.hamlet
     templates/auth/register.hamlet
     templates/backups.hamlet
+    templates/book-user/add-details.hamlet
     templates/book-user/booked.hamlet
     templates/book-user/select-client.hamlet
     templates/book-user/select-slot.hamlet
