--- a/smos-data-gen/smos-data-gen.cabal
+++ b/smos-data-gen/smos-data-gen.cabal
@@ -210,6 +210,7 @@ test-suite smos-data-test
       Smos.Data.GoldenSpec
       Smos.Data.SchemaSpec
       Smos.Data.TypesSpec
+      Smos.Data.VersionCheckSpec
       Smos.DataSpec
       Paths_smos_data_gen
   hs-source-dirs:
