Configure bookings via a file instead of via a web interface

--- a/smos-server-gen/smos-server-gen.cabal
+++ b/smos-server-gen/smos-server-gen.cabal
@@ -78,6 +78,7 @@ library
     , sydtest-persistent-sqlite
     , sydtest-wai
     , unliftio
+    , yaml
   default-language: Haskell2010
 
 executable smos-server-end-to-end-test
