--- a/smos-server/smos-server.cabal
+++ b/smos-server/smos-server.cabal
@@ -20,6 +20,7 @@ library
       Codec.Compression.Zstd.Extended
       Smos.Server
       Smos.Server.Backup
+      Smos.Server.Booking
       Smos.Server.Constants
       Smos.Server.DB
       Smos.Server.DB.Compressed
@@ -32,7 +33,6 @@ library
       Smos.Server.Handler.Admin.PostMigrateFiles
       Smos.Server.Handler.Admin.PutUserSubscription
       Smos.Server.Handler.DeleteBackup
-      Smos.Server.Handler.DeleteBookingSettings
       Smos.Server.Handler.DeleteUser
       Smos.Server.Handler.GetAgendaReport
       Smos.Server.Handler.GetApiVersion
@@ -54,7 +54,6 @@ library
       Smos.Server.Handler.PostRegister
       Smos.Server.Handler.PostStripeHook
       Smos.Server.Handler.PostSync
-      Smos.Server.Handler.PutBookingSettings
       Smos.Server.Handler.PutRestoreBackup
       Smos.Server.Handler.PutSmosFile
       Smos.Server.Looper
@@ -129,6 +128,7 @@ library
     , wai
     , wai-extra
     , warp
+    , yaml
     , zip
     , zstd
   default-language: Haskell2010
