Allow selecting slot sizes

--- a/smos-server-gen/package.yaml
+++ b/smos-server-gen/package.yaml
@@ -15,12 +15,14 @@ library:
   source-dirs: src/
   ghc-options: -Wall
   dependencies:
+  - QuickCheck
   - bytestring
   - containers
   - deepseq
   - dirforest
   - genvalidity
   - genvalidity-persistent
+  - genvalidity-sydtest
   - genvalidity-time
   - genvalidity-typed-uuid
   - http-client
