--- a/smos-web-server/smos-web-server.cabal
+++ b/smos-web-server/smos-web-server.cabal
@@ -191,5 +191,6 @@ test-suite smos-web-server-test
     , sydtest
     , sydtest-yesod
     , text
+    , websockets
     , yesod-auth
   default-language: Haskell2010
