Interactive work report

--- a/smos-docs-site/content/casts/waiting.yaml
+++ b/smos-docs-site/content/casts/waiting.yaml
@@ -3,6 +3,7 @@ file: projects/interviews/cs-syd.smos
 packages:
 - smos-query
 - smos
+- tzdata
 environment:
   SMOS_WORKFLOW_DIR: .
   SMOS_EXPLAINER_MODE: 'True'
