--- a/smos-docs-site/smos-docs-site.cabal
+++ b/smos-docs-site/smos-docs-site.cabal
@@ -98,6 +98,7 @@ extra-source-files:
     content/pages/smos-query/free.markdown
     content/pages/smos-query/log.markdown
     content/pages/smos-query/next.markdown
+    content/pages/smos-query/ongoing.markdown
     content/pages/smos-query/projects.markdown
     content/pages/smos-query/report.markdown
     content/pages/smos-query/sorter.markdown
