smos-notify: The notification now shows the filename of the entry that the notification is about.

--- a/smos-notify/package.yaml
+++ b/smos-notify/package.yaml
@@ -16,9 +16,11 @@ library:
   source-dirs: src/
   ghc-options: -Wall
   dependencies:
+    - autodocodec
     - conduit
     - containers
     - envparse
+    - filepath
     - hashable
     - monad-logger
     - optparse-applicative
@@ -34,7 +36,6 @@ library:
     - smos-directory
     - text
     - time
-    - autodocodec
 
 executables:
   smos-notify:
