--- a/smos-notify/smos-notify.cabal
+++ b/smos-notify/smos-notify.cabal
@@ -32,6 +32,7 @@ library
     , conduit
     , containers
     , envparse
+    , filepath
     , hashable
     , monad-logger
     , optparse-applicative
