--- a/smos-query/smos-query.cabal
+++ b/smos-query/smos-query.cabal
@@ -24,6 +24,7 @@ library
       Smos.Query.Commands.Import
       Smos.Query.Commands.Log
       Smos.Query.Commands.Next
+      Smos.Query.Commands.Ongoing
       Smos.Query.Commands.PreparedReport
       Smos.Query.Commands.Projects
       Smos.Query.Commands.Stats
