nice ongoing report

--- a/smos-query/smos-query.cabal
+++ b/smos-query/smos-query.cabal
@@ -92,6 +92,7 @@ test-suite smos-query-test
       Smos.Query.AgendaSpec
       Smos.Query.FreeSpec
       Smos.Query.NextSpec
+      Smos.Query.OngoingSpec
       Smos.Query.TestUtils
       Smos.Query.WaitingSpec
       Smos.Query.WorkSpec
