--- a/smos-calendar-import/package.yaml
+++ b/smos-calendar-import/package.yaml
@@ -19,6 +19,7 @@ library:
     - autodocodec
     - bytestring
     - case-insensitive
+    - conformance
     - containers
     - envparse
     - http-client
@@ -63,6 +64,7 @@ tests:
     - autodocodec
     - autodocodec-yaml
     - bytestring
+    - conformance-gen
     - containers
     - deepseq
     - genvalidity
