--- a/smos-calendar-import/smos-calendar-import.cabal
+++ b/smos-calendar-import/smos-calendar-import.cabal
@@ -239,6 +239,7 @@ library
     , base
     , bytestring
     , case-insensitive
+    , conformance
     , containers
     , envparse
     , http-client
@@ -299,6 +300,7 @@ test-suite smos-calendar-import-test
     , autodocodec-yaml
     , base
     , bytestring
+    , conformance-gen
     , containers
     , deepseq
     , genvalidity
