--- a/smos-docs-site/smos-docs-site.cabal
+++ b/smos-docs-site/smos-docs-site.cabal
@@ -52,6 +52,7 @@ extra-source-files:
     content/changelogs/2022-11-15.markdown
     content/changelogs/2023-03-23.markdown
     content/changelogs/2023-09-12.markdown
+    content/changelogs/2023-11-25.markdown
     content/pages/blogposts.markdown
     content/pages/building-installation.markdown
     content/pages/cheat-sheet.markdown
