base64-encode the schedule hash

--- a/smos-scheduler/package.yaml
+++ b/smos-scheduler/package.yaml
@@ -18,6 +18,7 @@ library:
   dependencies:
     - aeson
     - autodocodec
+    - base64-bytestring
     - bytestring
     - conduit
     - containers
