--- a/smos-archive/package.yaml
+++ b/smos-archive/package.yaml
@@ -14,6 +14,7 @@ dependencies:
 library:
   source-dirs: src/
   ghc-options: -Wall
+  build-tools: autoexporter
   dependencies:
     - autodocodec
     - bytestring
