Upgrade fuzzy-time and cursor-fuzzy-time

--- a/.hlint.yaml
+++ b/.hlint.yaml
@@ -11,6 +11,8 @@
 - ignore:
     name: "Use second"
 - ignore:
+    name: "Use rights"
+- ignore:
     name: "Use Just"
 - ignore:
     name: "Use void"
@@ -168,3 +170,12 @@
   # # > fromIntegral (300 :: Word) :: Word8
   # # 44
   # - {name: fromIntegral, within: []}
+# Until this we use a version of hlint that has this issue fixed:
+# https://github.com/ndmitchell/hlint/issues/1557
+- ignore:
+    name: "Unused LANGUAGE pragma"
+    within:
+      - Smos.Docs.Site.Changelog
+      - Smos.Docs.Site.ModuleDocs
+      - Smos.Docs.Site.DependencyGraph
+      - Smos.Docs.Site.Static
