--- a/smos-docs-site/smos-docs-site.cabal
+++ b/smos-docs-site/smos-docs-site.cabal
@@ -53,6 +53,7 @@ extra-source-files:
     content/changelogs/2023-03-23.markdown
     content/changelogs/2023-09-12.markdown
     content/changelogs/2023-11-25.markdown
+    content/changelogs/2024-02-13.markdown
     content/pages/blogposts.markdown
     content/pages/building-installation.markdown
     content/pages/cheat-sheet.markdown
