--- a/smos/smos.cabal
+++ b/smos/smos.cabal
@@ -1,6 +1,6 @@
 cabal-version: 1.12
 
--- This file has been generated from package.yaml by hpack version 0.35.2.
+-- This file has been generated from package.yaml by hpack version 0.34.7.
 --
 -- see: https://github.com/sol/hpack
 
@@ -158,6 +158,8 @@ library
     , unliftio
     , validity
     , vty
+    , vty-crossplatform
+    , vty-unix
   default-language: Haskell2010
 
 executable smos
@@ -230,5 +232,6 @@ test-suite smos-test
     , time
     , unliftio
     , vty
+    , vty-crossplatform
     , yaml
   default-language: Haskell2010
